--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="300dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:alpha="0.5"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
@@ -9,6 +10,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
+        app:cardCornerRadius="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
