--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:alpha="0.5"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
@@ -10,9 +10,9 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        app:cardCornerRadius="15dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:cardCornerRadius="15dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
