--- a/app/src/main/res/layout/activity_single_view.xml
+++ b/app/src/main/res/layout/activity_single_view.xml
@@ -14,7 +14,6 @@
         android:layout_height="300dp"
         android:layout_margin="12dp"
         android:background="@drawable/input_outline2"
-        android:backgroundTint="@android:color/white"
         android:fadingEdgeLength="50dp"
         android:src="@mipmap/ic_launcher_round" />
 
@@ -24,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:padding="12dp"
-        android:text="asjdakjsakgfjhvajhadvfjhsdvhjvdncbvzxnvcnzxvchjc"
+        android:text="@string/app_name"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
