--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
     android:alpha="0.5"
-    android:background="@color/colorPrimary"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="8dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -21,7 +21,9 @@
             <ImageView
                 android:id="@+id/quote_image"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="200dp"
+                android:alpha="100"
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/quote_text"
@@ -29,8 +31,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_below="@id/quote_image"
-                android:padding="4dp"
-                android:textStyle="bold" />
+                android:background="@color/colorPrimaryDark"
+                android:fontFamily="casual"
+                android:padding="8dp"
+                android:text="@string/app_name"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
